k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: regions4climate
  labels:
    name: regions4climate
