k8s/pygeoapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pygeoapi
  namespace: regions4climate
  labels:
    app: pygeoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pygeoapi
  template:
    metadata:
      labels:
        app: pygeoapi
    spec:
      containers:
        - name: pygeoapi
          image: geopython/pygeoapi:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /pygeoapi/local.config.yml
              subPath: local.config.yml
            - name: data
              mountPath: /pygeoapi/tests/data
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: pygeoapi-config
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pygeoapi
  namespace: regions4climate
  labels:
    app: pygeoapi
spec:
  selector:
    app: pygeoapi
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
