k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r4c-cesium-viewer
  namespace: regions4climate
  labels:
    app.kubernetes.io/name: r4c-cesium-viewer
    app.kubernetes.io/instance: r4c-cesium-viewer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 # Maps to nginx port
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: r4c-cesium-viewer
    app.kubernetes.io/instance: r4c-cesium-viewer
