k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: r4c-cesium-viewer
  namespace: regions4climate
  labels:
    app.kubernetes.io/name: r4c-cesium-viewer
    app.kubernetes.io/instance: r4c-cesium-viewer
spec:
  rules:
    - host: r4c-cesium-viewer.test
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: r4c-cesium-viewer
                port:
                  number: 80
